Fix navbar to top and related spacing adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
 
 #profile-picture {
   max-width: 100%;
-  max-height: 50vh;
+  max-height: 45vh;
 }
 
 #short-description ul i {
@@ -69,4 +69,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #profile-links {
   margin-top: 10px;
+}
+
+#introduction {
+  margin-top: 80px;
 }
